--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			left: 150px;
 		}
 
-		/* Make the columns the same height as eachi */
+		/* Make the columns the same height as eachi h */
 		#container {
 			overflow: hidden;
 		}
