--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
-<table style="background-color:#FFFFE0;">
-<tr style="background-color:#BDB76B;color:#ifffff;">
-<th>Table Header</th><th>Table Header</th>
-</tr>
-<tr>
-<td>Table cell 1</td><td>Table cell 2</td>
-</tr>
-<tr>
-<td>Table cell 3</td><td>Table cell 4</td>
-</tr>
-</table>
+<!DOCTYPE html>
+<html>
+
+<head>
+  <title>preprod environment</title>
+</head>
+
+<body>
+
+  <h1>PRE-PROD ENV</h1> 
+  <h2>Web Site Main Ingredients:</h2>
+
+  <p>Pages (HTML)</p>
+  <p>Style Sheets (CSS)</p>
+  <p>Computer Code (JavaScript)</p>
+  <p>Live Data (Files and Databases)</p>
+
+</body>
+
+</html> 
