updated intgration env

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-  <title>preprod environment</title>
+  <title>integration environment</title>
 </head>
 
 <body>
 
-  <h1>PRE-PROD ENV</h1> 
+  <h1>INT ENV</h1> 
   <h2>Web Site Main Ingredients:</h2>
 
   <p>Pages (HTML)</p>
