--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>integration environment check</title>
+  <title>integration environment check...</title>
 </head>
 
 <body>
