--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-  <title>prod environment</title>
+  <title>hotfix done environment</title>
 </head>
 
 <body>
 
-  <h1>PROD ENV</h1> 
+  <h1>hotfix done ENV</h1> 
   <h2>Web Site Main Ingredients:</h2>
 
   <p>Pages (HTML)</p>
